--- a/src/app/dashboard/edit-payload/edit-payload.component.html
+++ b/src/app/dashboard/edit-payload/edit-payload.component.html
@@ -1,12 +1,14 @@
-<section class="newpayload">
-  <h1>Fill in the form to generate new payload</h1>
+<app-loading *ngIf="loadingData" ></app-loading>
+<section *ngIf="!loadingData" class="newpayload">
+  <h1>Edit the requested info and submit</h1>
 
   <form class="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
     <label for="deliveryDate">
       Delivary Date
       <input
         type="date"
-        ngModel
+        [ngModel]="transaction.deliveryDate | date:'yyyy-MM-dd'"
+        (ngModelChange)="newDeliveryDate = $event"
         #deliveryDate="ngModel"
         required
         name="deliveryDate"
@@ -16,7 +18,7 @@
     <label for="payload">
       Description of Items
       <textarea
-        ngModel
+        [(ngModel)]="transaction.payload"
         #payload="ngModel"
         name="payload"
         required
@@ -29,7 +31,7 @@
       Payment Voucher Number
       <input
         type="number"
-        ngModel
+        [(ngModel)]="transaction.paymentVoucherNumber"
         #paymentVoucherNumber="ngModel"
         required
         name="paymentVoucherNumber"
@@ -40,7 +42,7 @@
       Purchase Order Number
       <input
         type="text"
-        ngModel
+        [(ngModel)]="transaction.purchaseOrderNumber"
         #purchaseOrderNumber="ngModel"
         required
         name="purchaseOrderNumber"
@@ -48,25 +50,21 @@
     </label>
 
     <label for="invoiceAmount">
-      Invoice Amount {{ invoiceAmounti }}
+      Invoice Amount
       <input
         type="number"
-        ngModel
+        [(ngModel)]="transaction.invoiceAmount"
         #invoiceAmount="ngModel"
         required
         name="invoiceAmount"
       />
     </label>
 
-    <label for="withholdingTax">
+    <label for="tax">
       SELECT WITHHOLDING TAX
-      <select
-        name="withholdingTax"
-        ngModel
-        #withholdingTax="ngModel"
-        required
-        (change)="calculateAmount($event.target.value, invoiceAmount)"
-      >
+      <select name="tax" [(ngModel)]="transaction.withholdingTax"
+      #tax="ngModel" required
+        (change)="calculateAmount($event.target.value, invoiceAmount)">
         <option value="0">0%</option>
         <option value="6">6%</option>
       </select>
@@ -76,8 +74,8 @@
       Amount to be paid
       <input
         type="number"
-        placeholder=" {{ amountCalculated | currency: 'UGX ':'code' }}"
-        ngModel
+        [value]="amountCalculated | currency: 'UGX ':'code'"
+        [(ngModel)]="transaction.amountToBePaid"
         #amountToBePaid="ngModel"
         disabled
         name="amountToBePaid"
@@ -88,7 +86,7 @@
       Project Code
       <input
         type="text"
-        ngModel
+        [(ngModel)]="transaction.projectCode"
         #projectCode="ngModel"
         required
         name="projectCode"
@@ -99,14 +97,14 @@
       Activity Line
       <input
         type="text"
-        ngModel
+        [(ngModel)]="transaction.activityLine"
         #activityLine="ngModel"
         required
         name="activityLine"
       />
     </label>
 
-    <button *ngIf="!loading" [disabled]="form.invalid">Submit</button>
+    <button *ngIf="!loading" [disabled]="form.invalid">Submit Updates</button>
 
     <app-loading *ngIf="loading"></app-loading>
   </form>
